# Occano

./: README.md  WIRING.md
backend/: main.py
src-tauri/: Cargo.toml  tauri.conf.json
src/screens/: SetupScreen.tsx
